--- a/themes/clean-blog/layout/index.ejs
+++ b/themes/clean-blog/layout/index.ejs
@@ -1,4 +1,4 @@
-!-- Page Header -->
+<!-- Page Header -->
 <!-- Set your background image for this header in the theme's configuration: index_cover -->
 <header class="intro-header" style="background-image: url('<%- theme.index_cover %>')">
     <div class="container">
