--- a/themes/clean-blog/source/css/article.styl
+++ b/themes/clean-blog/source/css/article.styl
@@ -37,7 +37,7 @@ article
               content '—'
               color #ccc
               padding 0 0.5em
-
+      word-break keep-all
       .pullquote
         float right
         border none
