--- a/themes/clean-blog/source/css/base.styl
+++ b/themes/clean-blog/source/css/base.styl
@@ -2,9 +2,9 @@
 @import "mixins.styl"
 
 body
-  @extend .serif
-  font-size 16px
-  color gray-dark
+  @extend .body
+  font-size 1.7rem
+  color black
 
 p
   line-height 2
