--- a/themes/clean-blog/layout/_partial/head.ejs
+++ b/themes/clean-blog/layout/_partial/head.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/github-dark.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
 <head>
 
     <meta charset="utf-8"/>
